WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39766
[Qt] ScreenQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39766
Summary
[Qt] ScreenQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:29:29 PDT
WebCore/platform/qt/ScreenQt.cpp:33: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ScreenQt.cpp:36: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ScreenQt.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 1 files
Attachments
Patch that fixes the coding style issues
(1.38 KB, patch)
2010-05-26 14:36 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(1.43 KB, patch)
2010-06-04 18:46 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:36:20 PDT
Created
attachment 57146
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:44:48 PDT
QtTriaged
David Levin
Comment 3
2010-05-27 11:19:47 PDT
Comment on
attachment 57146
[details]
Patch that fixes the coding style issues
> No new tests. (OOPS!)
Ditto.
Anders Bakken
Comment 4
2010-06-04 18:46:20 PDT
Created
attachment 57941
[details]
Patch
WebKit Commit Bot
Comment 5
2010-06-05 01:17:21 PDT
Comment on
attachment 57941
[details]
Patch Rejecting patch 57941 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Last 500 characters of output: ng Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Skipped list contained 'compositing/iframes/composited-iframe.html', but no file of that name could be found Testing 19055 test cases. fast/loader/recursive-before-unload-crash.html -> failed Exiting early after 1 failures. 14082 tests run. 203.02s total testing time 14081 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 4 test cases (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/3106070
Eric Seidel (no email)
Comment 6
2010-06-13 17:05:40 PDT
Comment on
attachment 57941
[details]
Patch Flaky test.
WebKit Commit Bot
Comment 7
2010-06-13 23:20:58 PDT
Comment on
attachment 57941
[details]
Patch Clearing flags on attachment: 57941 Committed
r61109
: <
http://trac.webkit.org/changeset/61109
>
WebKit Commit Bot
Comment 8
2010-06-13 23:21:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug