2010-06-13  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        [Qt] ScreenQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39766

        * platform/qt/ScreenQt.cpp:

Canonical link: https://commits.webkit.org/52122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61109 268f45cc-cd09-0410-ab3c-d52691b4dbfc