WebCore/platform/qt/ScreenQt.cpp
@@ -23,18 +23,18 @@
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
 #include "config.h"
 #include "Screen.h"
 
-#include "Page.h"
+#include "FloatRect.h"
 #include "Frame.h"
 #include "FrameView.h"
-#include "Widget.h"
 #include "IntRect.h"
-#include "FloatRect.h"
+#include "Page.h"
+#include "Widget.h"
 
 #include <QApplication>
 #include <QDesktopWidget>
